docs: update index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,110 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
+	<link rel="icon" href="assets/favicon.ico">
+	<title>RSSchool CV</title>
 </head>
 <body>
+	<div class="wrapper">
+		<div class="content">
+			<nav class="nav">
+				<div class="container">
+					<ul class="nav-list">
+						<li class="nav-item"><a href="" class="nav-link">contacts</a></li>
+						<li class="nav-item"><a href="" class="nav-link">skills</a></li>
+						<li class="nav-item"><a href="" class="nav-link">english</a></li>
+						<li class="nav-item"><a href="" class="nav-link">projects</a></li>
+						<li class="nav-item"><a href="" class="nav-link">code</a></li>
+						<li class="nav-item"><a href="" class="nav-link">education</a></li>
+						<li class="nav-item"><a href="" class="nav-link">summary</a></li>
+					</ul>
+				</div>
+			</nav>
+			<header class="header">
+				<div class="container">
+					<div class="header-row">
+						<div class="header-text">
+							<h1 class="header-name">siarhei rudenka</h1>
+							<div class="header-prof">frontend developer</div>
+						</div>
+						<div class="header-image"></div>
+					</div>
+				</div>
+			</header>
+			<main class="main">
+				<div class="container">
+					<div class="main-row">
+						<section class="main-section main-section-left">
+							<div class="main-contacts">
+								<h2>contacts</h2>
+								<ul class="items-list">
+									<li class="item contacts-item">Location: Slutsk, Belarus</li>
+									<li class="item contacts-item">GitHub: <a href="https://github.com/SiarheiSR">SiarheiSR</a></li>
+									<li class="item contacts-item">Discord: Siarhei Rudenka#3143</li>
+									<li class="item contacts-item">Email: <a href="RSS.FE.SSR@gmail.com">RSS.FE.SSR@gmail.com</a></li>
+									<li class="item contacts-item">LinkedIn:</li>
+									<li class="item contacts-item">Phone: +375</li>
+								</ul>
+							</div>
+							<div class="main-skills">
+								<h2>skills</h2>
+								<ul class="items-list">
+									<li class="item skills-item">HTML, CSS (SASS/SCSS, BEM)</li>
+									<li class="item skills-item">JavaScript (basic)</li>
+									<li class="item skills-item">Git / GitHub</li>
+									<li class="item skills-item">Chrome DevTools</li>
+									<li class="item skills-item">Figma</li>
+								</ul>
+							</div>
+							<div class="main-english">
+								<h2>english</h2>
+								<p class="items-text">B1 - Pre-Intermediate</p>
+							</div>
+						</section>
+						<section class="main-section">
+							<div class="main-projects">
+								<h2>projects</h2>
+								<ul class="items-list">
+									<li class="item projects-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae dolor, accusantium consequuntur enim qui obcaecati cum ducimus? Eos nobis numquam, sit sequi ex similique ad, explicabo, impedit laudantium quibusdam tempore!</li>
+									<li class="item projects-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae dolor, accusantium consequuntur enim qui obcaecati cum ducimus? Eos nobis numquam, sit sequi ex similique ad, explicabo, impedit laudantium quibusdam tempore!</li>
+								</ul>
+							</div>
+							<div class="main-code">
+								<h2>code</h2>
+								<code class="items-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis beatae quaerat, accusamus eveniet nobis voluptatem velit. Inventore, velit laborum eum quibusdam incidunt asperiores minima nisi alias? Alias corporis vel rerum?Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae dolor, accusantium consequuntur enim qui obcaecati cum ducimus? Eos nobis numquam, sit sequi ex similique ad, explicabo, impedit laudantium quibusdam tempore!
+								</code>
+							</div>
+							<div class="main-education">
+								<h2>education</h2>
+								<ul class="items-list">
+									<li class="item education-item">Rolling Scopes School Frontend Cource</li>
+									<li class="item education-item">Belarusian State University of Informatics and Radioelectronics</li>
+								</ul>
+							</div>
+							<div class="main-summary">
+								<h2>summary</h2>
+								<p class="items-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae nobis repellendus dolor adipisci unde molestias omnis rerum cum? Modi, velit consequatur dicta voluptatibus illo tenetur dolorem harum est laudantium eos!</p>
+							</div>
+						</section>
+					</div>
+				</div>
+			</main>
+		</div>
+		<footer class="footer">
+			<div class="container">
+				<div class="footer-row">
+					<div class="footer-text">
+						&copy; 2022 <a href="https://SiarheiSR.github.io/rsschool-cv/">SiarheiSR</a>
+					</div>
+					<div class="footer-link">
+						<a href="https://rs.school/js/">
+							<img class="footer-image" src="assets/img/rs_school_js.svg" alt="RSSchool">
+						</a>
+					</div>
+				</div>
+			</div>
+		</footer>
+	</div>
 </body>
 </html>
