docs: update index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					</div>
 					<div class="footer-link">
 						<a href="https://rs.school/js/">
-							<img class="footer-image" src="rs_school_js.svg" alt="RSSchool">
+							<img class="footer-image" src="./rs_school_js.svg" alt="RSSchool">
 						</a>
 					</div>
 				</div>
