docs: update index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 									<li class="item contacts-item">Location: Slutsk, Belarus</li>
 									<li class="item contacts-item">GitHub: <a href="https://github.com/SiarheiSR">SiarheiSR</a></li>
 									<li class="item contacts-item">Discord: Siarhei Rudenka#3143</li>
-									<li class="item contacts-item">Email: <a href="RSS.FE.SSR@gmail.com">RSS.FE.SSR@gmail.com</a></li>
+									<li class="item contacts-item">Email: <a href="mailto:RSS.FE.SSR@gmail.com">RSS.FE.SSR@gmail.com</a></li>
 									<li class="item contacts-item">LinkedIn:</li>
 									<li class="item contacts-item">Phone: +375</li>
 								</ul>
